<resources>
    <string name="app_name">KKMiniBus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search">SEARCH</string>
    <string name="menu_settings">HOME</string>
    <string name="hello_home_fragment">Hello HOME fragment</string>
    <string name="hello_search_fragment">Hello SEARCH fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_place">Search of a place</string>
    <string name="way_mini_bus">a Mini Bus Route</string>
    <string name="put_place_to_search">Name a place for search</string>
    <string name="total_way">All of</string>
    <string name="minibus">The Mini Bus Route</string>
    <string name="cost_mini_bus">Either 19 Route and Mini Bus fare</string>
    <string name="kornkan">of Khon Kaen City</string>
    <string name="feet_back">Report</string>
    <string name="how_to_use">Instruction</string>
    <string name="change_language">Language</string>
    <string name="search_detail">Search Detail</string>
    <string name="minibus_go">The Mini Bus Route to</string>
    <string name="comment">Comment</string>
    <string name="comment_toolbar">Suggestions and Feedback</string>
    <string name="please_comment">Please specify details.</string>
    <string name="input_place">Input place</string>
    <string name="detail_mini_bus">Detail Mini Bus</string>
    <string name="th">THAI</string>
    <string name="en">ENGLISH</string>
    <string name="title_activity_maps_detail">Map</string>
    <string name="title_activity_map_all">Map</string>
    <string name="search_your_mini_bus">Search your mini bus</string>
    <string name="bus_route">Mini Bus route</string>
    <string name="send_your_comment">SEND YOUR COMMENT</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="please_tell_your_information">Please fill your information</string>
    <string name="ban_khok_fan_pong_line2">Ban Khok Fan Pong</string>
    <string name="ban_hua_thong_line2">Ban Hua Thong</string>
    <string name="ban_hua_hi_line2">Ban Kum Hi</string>
    <string name="central_plaza_khonkaen_line2">CentralPlaza Khon Kaen</string>
    <string name="chao_por_lak_muang_khonkaen_shrine_line2">Chao Por Lak Muang Khon Kaen Shrine</string>
    <string name="bus_terminal_1_line2">Bus Terminal 1</string>
    <string name="khonkaen_wittayayon_school_line2">Khon Kaen Wittayayon School</string>
    <string name="bang_lamphu_market_line2">Bang Lamphu Market</string>
    <string name="municipal_market_line2">Municipal Market</string>
    <string name="kanlayanawat_school_line2">Kanlayanawat School</string>
    <string name="khonkaen_metropolitan_police_station_line2">Khon Kaen Metropolitan Police Station</string>
    <string name="sentosa_khonkaen_line2">Sentosa Khon Kaen</string>
    <string name="khon_kaen_post_office_line2">Khon Kaen Post Office</string>
    <string name="wat_sri_chan_line2">Wat Sri Chan</string>
    <string name="khon_kaen_prison_line2">Khon Kaen Prison</string>
    <string name="northeastern_vocation_institute_khonkaen_technical_college_line2">Northeastern Vocation Institute Khon Kaen Technical College</string>
    <string name="medical_education_center_khonkaen_hospital_line2">Medical Education Center Khon Kaen Hospital</string>
    <string name="rajamangala_university_of_technology_isan_line2">Rajamangala University of Technology Isan</string>
    <string name="nong_yai_market_line2">Nong Yai Market</string>
    <string name="ban_phra_khue_line2">Ban Phra Khue</string>
    <string name="ban_nong_pho_line2">Ban Nong Pho</string>
    <string name="ban_nong_sang_line2">Ban Nong Sang</string>
    <string name="ban_khok_noi_line2">Ban Khok Noi</string>
    <string name="bus_terminal_3_line3">Bus Terminal 3</string>
    <string name="makro_khon_kaen_line3">Makro Khon Kaen</string>
    <string name="watergate_market_khonkaen_line3">Watergate Market Khon Kaen</string>
    <string name="wufoo_market_line3">Wufoo Market</string>
    <string name="kaen_nakhon_wittayalai_school_line3">Kaen Nakhon Wittayalai School</string>
    <string name="chao_por_lak_muang_khonkaen_shrine_line3">Chao Por Lak Muang Khon Kaen Shrine</string>
    <string name="central_plaza_khonkaen_line3">CentralPlaza Khon Kaen</string>
    <string name="ratchaphruek_hospital_line3">Ratchaphruek Hospital</string>
    <string name="bus_terminal_1_line3">Bus Terminal 1</string>
    <string name="khonkaen_wittayayon_school_line3">Khon Kaen Wittayayon School</string>
    <string name="bang_lamphu_market_line3">Bang Lamphu Market</string>
    <string name="municipal_market_line3">Municipal Market</string>
    <string name="kanlayanawat_school_line3">Kanlayanawat School</string>
    <string name="khonkaen_metropolitan_police_station_line3">Khon Kaen Metropolitan Police Station</string>
    <string name="khonkaen_post_office_line3">Khon Kaen Post Office</string>
    <string name="northeastern_vocation_institute_khonkaen_technical_college_line3">Northeastern Vocation Institute Khon Kaen Technical College</string>
    <string name="rajamangala_university_of_technology_isan_line3">Rajamangala University of Technology Isan</string>
    <string name="nong_yai_market_line3">Nong Yai Market</string>
    <string name="ban_tha_hin_line3">Ban Tha Hin</string>
    <string name="ban_promnimit_line3">Ban Promnimit</string>
    <string name="bus_terminal_3_line4">Bus Terminal 3</string>
    <string name="makro_khonkaen_line4">Makro Khon Kaen</string>
    <string name="watergate_market_khonkaen_line4">Watergate Market Khon Kaen</string>
    <string name="wufoo_market_line4">Wufoo Market</string>
    <string name="khonkaen_filament_industry_line4">Khonkaen Filament Industry</string>
    <string name="kaen_nakhon_wittayalai_school_line4">Kaen Nakhon Wittayalai School</string>
    <string name="khon_kaen_deaf_school_line4">Khon Kaen Deaf School</string>
    <string name="khonkaen_sports_stadium_line4">Khon Kaen Sports Stadium</string>
    <string name="wat_klang_municipal_school_line4">Wat Klang Municipal School</string>
    <string name="fairy_plaza_line4">Fairy Plaza</string>
    <string name="municipal_market_line4">Municipal Market</string>
    <string name="bang_lamphu_market_line4">Bang Lamphu Market</string>
    <string name="khonkaen_wittayayon_school_line4">Khon Kaen Wittayayon School</string>
    <string name="bus_terminal_1_line4">Bus Terminal 1</string>
    <string name="sirikit_heart_center_line4">Sirikit Heart Center</string>
    <string name="srinagarind_hospital_line4">Srinagarind Hospital</string>
    <string name="khonkaen_university_line4">Khon Kaen University</string>
    <string name="lotus_extra_khonkhon_line4">Lotus Extra Khon Khon</string>
    <string name="ban_samram_line4">Ban Samram</string>
    <string name="ban_nong_nam_kieng_line4">Ban Nong Nam Kieng</string>
    <string name="nongpailom_market_line5">Nongpailom Market</string>
    <string name="municipal_market_line5">Municipal Market</string>
    <string name="bang_lamphu_market_line5">Bang Lamphu Market</string>
    <string name="khonkaen_wittayayon_school_line5">Khon Kaen Wittayayon School</string>
    <string name="sentosa_khonkaen_line5">Sentosa Khon Kaen</string>
    <string name="khonkaen_cytocare_line5">Khon Kaen Cytocare</string>
    <string name="khonkaen_university_line5">Khon Kaen University</string>
    <string name="khonkaen_institude_for_skill_development_line5">Khonkaen Institude for Skill Development</string>
    <string name="ban_thum_line5">Ban Thum</string>
    <string name="municipal_market_line6">Municipal Market</string>
    <string name="municipal_office_khonkaen_line6">Municipal Office Khon Kaen</string>
    <string name="chao_por_lak_muang_khonkaen_shrine_line6">Chao Por Lak Muang Khon Kaen Shrine</string>
    <string name="central_plaza_khonkaen_line6">CentralPlaza Khon Kaen</string>
    <string name="big_c_khonkaen_line6">Big C Khon Kaen</string>
    <string name="ton_tann_market_line6">Ton Tann Market</string>
    <string name="home_pro_khonkaen_line6">Home Pro Khon Kaen</string>
    <string name="makro_khonkaen_line6">Makro Khon Kaen</string>
    <string name="watergate_market_khonkaen_line6">Watergate Market Khon Kaen</string>
    <string name="tesco_lotus_khonkaen_line6">Tesco Lotus Khon Kaen</string>
    <string name="bus_terminal_3_line6">Bus Terminal 3</string>
    <string name="ban_kut_kwang_line6">Ban Kut Kwang</string>
    <string name="ban_tha_phra_line6">Ban Tha Phra</string>
    <string name="ban_nong_ya_phraek_line6">Ban Nong Ya Phraek</string>
    <string name="ban_tha_rae_line6">Ban Tha Rae</string>
    <string name="ban_non_khawao_line6">Ban Non Khawao</string>
    <string name="ban_lao_nok_chum_line6">Ban Lao Nok Chum</string>
    <string name="khonkaen_university_line8">Khon Kaen University</string>
    <string name="sentosa_khonkaen_line8">Sentosa Khon Kaen</string>
    <string name="bus_terminal_1_line8">Bus Terminal 1</string>
    <string name="bus_terminal_2_line8">Bus Terminal 2</string>
    <string name="khonkaen_metropolitan_police_station_line8">Khon Kaen Metropolitan Police Station</string>
    <string name="khonkaen_wittayayon_school_line8">Khon Kaen Wittayayon School</string>
    <string name="kanlayanawat_school_line8">Kanlayanawat School</string>
    <string name="municipal_market_line8">Municipal Market</string>
    <string name="fairy_plaza_line8">Fairy Plaza</string>
    <string name="muang_kao_line8">Muang Kao</string>
    <string name="bueng_kaen_nakhon_line8">Bueng Kaen Nakhon</string>
    <string name="don_bom_line8">Don Bom</string>
    <string name="ban_sam_liam_line9">Ban Sam Liam</string>
    <string name="bus_terminal_1_line9">Bus Terminal 1</string>
    <string name="bus_terminal_2_line9">Bus Terminal 2</string>
    <string name="khonkaen_wittayayon_school_line9">Khon Kaen Wittayayon School</string>
    <string name="khonkaen_post_office_line9">Khon Kaen Post Office</string>
    <string name="municipal_market_line9">Municipal Market</string>
    <string name="fairy_plaza_line9">Fairy Plaza</string>
    <string name="khonkaen_sports_stadium_line9">Khon Kaen Sports Stadium</string>
    <string name="kaen_nakhon_wittayalai_school_line9">Kaen Nakhon Wittayalai School</string>
    <string name="ton_tann_market_line9">Ton Tann Market</string>
    <string name="north_eastern_university_line9">North-Eastern University</string>
    <string name="ban_kok_line9">Ban Kok</string>
    <string name="ban_chot_line9">Ban Chot</string>
    <string name="ban_sa_at_line9">Ban Sa-At</string>
    <string name="khonkaen_university_line10">Khon Kaen University</string>
    <string name="bus_terminal_1_line10">Bus Terminal 1</string>
    <string name="district_khonkaen_line10">District Khon Kaen</string>
    <string name="ban_bakham_line10">Ban Bakham</string>
    <string name="khonkaen_prison_line10">Khon Kaen Prison</string>
    <string name="bus_terminal_2_line10">Bus Terminal 2</string>
    <string name="khonkaen_wittayayon_school_line10">Khon Kaen Wittayayon School</string>
    <string name="khonkaen_post_office_line10">Khon Kaen Post Office</string>
    <string name="khonkaen_metropolitan_police_station_line10">Khon Kaen Metropolitan Police Station</string>
    <string name="municipal_market_line10">Municipal Market</string>
    <string name="fairy_plaza_line10">Fairy Plaza</string>
    <string name="khonkaen_sports_stadium_line10">Khon Kaen Sports Stadium</string>
    <string name="kaen_nakhon_wittayalai_school_line10">Kaen Nakhon Wittayalai School</string>
    <string name="watergate_market_khonkaen_line10">Watergate Market Khon Kaen</string>
    <string name="makro_khonkaen_line10">Makro Khon Kaen</string>
    <string name="tesco_lotus_khonkaen_line10">Tesco Lotus Khon Kaen</string>
</resources>