<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_layout_search"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.app.arnont.kkminibus.fragment.SearchFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:orientation="vertical">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:gravity="center"
           android:textSize="@dimen/h1"
           android:text="@string/search_place"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal"
           android:gravity="center"
           android:layout_margin="20dp">


           <EditText
               android:id="@+id/edtSearch"
               android:layout_width="200dp"
               android:layout_height="50dp"
               android:hint="@string/input_place"
               android:layout_gravity="center_horizontal"
               android:background="@drawable/edittext_style"
               android:maxLines="1"/>
           <!--android:background="@drawable/edittext_style"-->
           <ImageView
               android:layout_width="40dp"
               android:layout_height="50dp"
               android:id="@+id/imgSearch"
               android:layout_gravity="center_horizontal"
               android:src="@drawable/ic_search"
               android:background="@drawable/search_btn_style"
               />
           <!--android:background="@drawabutton_search_styletyle"-->

       </LinearLayout>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:gravity="center"
           android:textSize="@dimen/h1"
           android:text="@string/put_place_to_search"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:gravity="center"
           android:textSize="@dimen/h1"
           android:text="@string/way_mini_bus"/>




   </LinearLayout>

</FrameLayout>
