<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.arnont.kkminibus.activity.CommentActivity"
    android:orientation="vertical"
    android:background="@color/white">


    <Toolbar
        android:id="@+id/toolbarComment"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:titleTextColor="@color/gold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_style">
            <EditText
                android:id="@+id/edtNameComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="@dimen/h1"
                android:hint="@string/name"
                android:maxEms="1"
                android:inputType="text"
                android:background="@drawable/edittext_white_style"/>
            <EditText
                android:id="@+id/edtEmailComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/h1"
                android:hint="@string/email"
                android:paddingTop="10dp"
                android:background="@drawable/edittext_white_style"
                android:layout_below="@+id/edtNameComment"/>
            <EditText
                android:id="@+id/edtComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="@dimen/h1"
                android:hint="@string/please_comment"
                android:maxEms="1"
                android:paddingTop="10dp"
                android:background="@drawable/edittext_white_style"
                android:layout_below="@+id/edtEmailComment"/>
        </RelativeLayout>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnComment"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:drawableRight="@drawable/ic_send_gold_24dp"
            android:paddingRight="30dp"
            android:background="@drawable/button_radius_black"
            android:textColor="@color/gold"
            android:layout_alignParentBottom="true"
            android:text="@string/send_your_comment" />

    </RelativeLayout>


</LinearLayout>
